Fix the display of alerts on mobile devices.

--- a/tdoc/common/static/tdoc/styles.css
+++ b/tdoc/common/static/tdoc/styles.css
@@ -1400,19 +1400,22 @@ html:not([data-tdoc-user-tags~=repo-access], [data-tdoc-local])
 
 /* Render alerts in the header. */
 .bd-header-article {
+    height: unset;
     flex-direction: column;
-    row-gap: 0.5rem;
     align-items: stretch;
 }
+.bd-header-article .header-article-items {
+    height: unset;
+}
 .bd-header-article:has(.tdoc-alerts:not(:empty)) {
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.3rem;
 }
 .tdoc-alerts {
     display: flex;
     flex-direction: column;
     max-height: 40vh;
     overflow-y: auto;
-    row-gap: 0.5rem;
+    row-gap: 0.3rem;
     align-items: stretch;
 }
 .tdoc-alerts:empty {
@@ -1420,11 +1423,18 @@ html:not([data-tdoc-user-tags~=repo-access], [data-tdoc-local])
 }
 .tdoc-alerts > .alert {
     --bs-alert-margin-bottom: 0;
+    --bs-alert-padding-x: 0.5rem;
+    --bs-alert-padding-y: 0.5rem;
+}
+.tdoc-alerts .alert-dismissible {
+    padding-right: 2.3rem;
 }
 .tdoc-alerts .alert-dismissible .btn-close {
     top: 0.2rem;
     right: 0.2rem;
-    padding: 1.1rem 1rem;
+    width: 0.8rem;
+    height: 0.8rem;
+    padding: 0.5rem;
 }
 
 /* Prevent the wrapper background set by pygments from being visible if the
